; ModuleID = '/home/carl/AnghaBench/linux/sound/hda/extr_hdac_device.c_codec_read.c'
source_filename = "/home/carl/AnghaBench/linux/sound/hda/extr_hdac_device.c_codec_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hdac_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hdac_device*, i32, i32, i32, i32)* @codec_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @codec_read(%struct.hdac_device* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.hdac_device*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.hdac_device* %0, %struct.hdac_device** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %14 = load %struct.hdac_device*, %struct.hdac_device** %7, align 8
  %15 = load i32, i32* %8, align 4
  %16 = load i32, i32* %10, align 4
  %17 = load i32, i32* %11, align 4
  %18 = call i32 @snd_hdac_make_cmd(%struct.hdac_device* %14, i32 %15, i32 %16, i32 %17)
  store i32 %18, i32* %12, align 4
  %19 = load %struct.hdac_device*, %struct.hdac_device** %7, align 8
  %20 = load i32, i32* %12, align 4
  %21 = load i32, i32* %9, align 4
  %22 = call i64 @snd_hdac_exec_verb(%struct.hdac_device* %19, i32 %20, i32 %21, i32* %13)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %5
  store i32 -1, i32* %6, align 4
  br label %27

25:                                               ; preds = %5
  %26 = load i32, i32* %13, align 4
  store i32 %26, i32* %6, align 4
  br label %27

27:                                               ; preds = %25, %24
  %28 = load i32, i32* %6, align 4
  ret i32 %28
}

declare dso_local i32 @snd_hdac_make_cmd(%struct.hdac_device*, i32, i32, i32) #1

declare dso_local i64 @snd_hdac_exec_verb(%struct.hdac_device*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
